Small code quality improvements